# Export_API_Whisper

./: auth_keys.json  main.py  pyproject.toml  transcribe_script.py  verify.sh
app/api/v1/endpoints/: transcribe.py
app/core/: config.py  security.py
app/models/: schemas.py
app/services/: transcription.py
