[project]
name = "export-whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "faster-whisper>=1.2.1",
    "openai>=2.14.0",
    "pyannote-audio>=4.0.3",
    "pydub>=0.25.1",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
    "torch>=2.4.1",
    "ctranslate2==4.4.0",
]
